--- a/sass/components/_cart.scss
+++ b/sass/components/_cart.scss
@@ -2,22 +2,19 @@
     border: 1px solid #888888;
     border-radius: 2rem;
 
-    width: 30vw;
-    height: 50vh;
+    width: 40vw;
+    height: 70vh;
     overflow: hidden;
     
     font-size: 1.2rem;
 
 
-    @include flexbox(end, center, column);
+    @include flexbox(center, center, column);
     margin-top: 1rem;
     img{
-
-        
         width: 90%;
         height: 60%;
         border-radius: 1rem;
-        
         
     }
 }
