--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 }
 
 h1 {
-  margin-top: 10rem;
+  margin-top: 5rem;
 }
 
 .navBarContainer {
@@ -48,13 +48,13 @@ h1 {
 .contenedorTarjeta {
   border: 1px solid #888888;
   border-radius: 2rem;
-  width: 30vw;
-  height: 50vh;
+  width: 40vw;
+  height: 70vh;
   overflow: hidden;
   font-size: 1.2rem;
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: center;
   align-items: center;
   margin-top: 1rem;
 }
@@ -82,6 +82,25 @@ h1 {
   align-items: left;
   font-size: 1.5rem;
   padding: 2rem;
+}
+
+.imgDetail {
+  border-radius: 1rem;
+}
+
+.boton {
+  width: 7rem;
+  height: 2rem;
+  border: 1px solid #000;
+  border-radius: 0.5rem;
+  background-color: #fff;
+  color: #000;
+  font-size: 1rem;
+  margin-bottom: 1.5rem;
+}
+.boton:hover {
+  color: white;
+  background-color: #000;
 }
 
 /*# sourceMappingURL=App.css.map */
